# antiq

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  angie3d.qbs  build.rs  index.html
3dui/: 3dui.qbs
3dui/examples/hello-world/: hello-world.qbs
3dui/src/: window.cpp
core/: core.qbs  engine.cpp
core/src/: core.cpp
examples/: application.rs  dot.rs  hello.rs  multi-window.rs  multi_window.rs  multiwindow.rs  rectangle.rs  simple_window.rs  single_window.rs  view.rs
examples/hello-world/: CMakeLists.txt  hello-world.qbs  main.a3d  main.aml  main.cpp
src/: lib.rs
src/3dui/: window.cpp  window.h
src/cmd/: CMakeLists.txt  cmd.qbs  main.cpp
src/core/: application.cpp  application.h  application.rs  canvas.rs  color.rs  context.rs  core.cpp  core.h  debug.cpp  debug.h  engine.cpp  engine.h  entity_core.rs  error.rs  event.rs  event_loop.rs  global.h  id.rs  log.rs  mod.rs  preferences.rs  widget_core.rs  window.rs  window_manager.rs
src/core/engine/: engine.cpp  engine.h  program.cpp  program.h
src/core/engine/compiler/: ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
src/core/layout/: box.rs  column.rs  grid.rs  linear.rs  mod.rs  row.rs
src/core/node/: mod.rs
src/entity/: application.rs  mod.rs
src/event/: event.rs  event_dispatcher.rs  event_loop.rs  mod.rs
src/gfx/: engine.rs  gpu.rs  mod.rs  pipeline_storage.rs  surface.rs
src/gfx/renderer/: mod.rs  scene_renderer.rs  ui_renderer.rs
src/gfx/shader/: mod.rs  shader_storage.rs
src/platform/: mod.rs
src/platform/linux/: application.rs  event_loop.rs  mod.rs  window.rs
src/platform/linux/wayland/: application.rs  context.rs  event_loop.rs  mod.rs  window.rs
src/platform/linux/x11/: application.rs  context.rs  event_loop.rs  window.rs
src/platform/macos/: application.rs  context.rs  event_loop.rs  mod.rs  window.rs
src/platform/windows/: application.rs  context.rs  event_loop.rs  mod.rs  window.rs
src/renderer/: engine.rs  mod.rs  pipeline_storage.rs  surface.rs
src/renderer/shader/: shader_storage.rs
src/renderer/shader/sources/: dot.wgsl
src/renderer/webgpu/: adapter.rs  canval_context.rs  canvas_context.rs  device.rs  gpu.rs  gpu_adapter.rs  gpu_canval_context.rs  gpu_device.rs  mod.rs
src/ui/: color.rs  layout.rs  mod.rs  node.rs  node_new.rs  ui3d.rs  widget.rs
src/ui/d2/: mod.rs  view.rs
src/ui/d2/geometry/: border.rs  mod.rs  position.rs  size.rs
src/ui/d2/layout/: column.rs  fill.rs  grid.rs  mod.rs  position.rs  row.rs  split.rs
src/ui/d2/widget/: blank.rs  mod.rs  rectangle.rs  view.rs
src/ui/d3/: mod.rs  scene.rs
src/ui/d3/geometry/: mod.rs  position.rs  size.rs
src/ui/d3/layout/: mod.rs
src/ui/d3/widget/: mod.rs
src/ui/layout/: fill.rs  mod.rs  split.rs
src/ui/scene/: mod.rs
src/ui/widget/: mod.rs  rectangle.rs  view.rs
src/view/: mod.rs  view2d.rs  view3d.rs
src/widget/: application_window.rs  mod.rs  rectangle.rs  window.rs
src/window/: application_window.rs  mod.rs  window.rs
tests/: application.rs  application_test.rs  window.rs
www/: index.html
