[package]
name = "antiq"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2021"
description = "3DUI toolkit"
repository = "https://github.com/krre/antiq"

[dependencies]
log = "0.4.25"
pollster = "0.4.0"
wgpu = "24.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
cfg-if = "1.0.0"
raw-window-handle = "0.6.2"
dirs = "6.0.0"
tempfile = "3.16.0"

[dev-dependencies]
env_logger = "0.11.6"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client"] }
wayland-backend = { version = "0.3.8", features = ["client_system"] }
x11rb = { version = "0.13.1", features = [
    "all-extensions",
    "allow-unsafe-code",
] }
as-raw-xcb-connection = "1.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.59.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"

[build-dependencies]
cfg_aliases = "0.2.1"
