[package]
name = "antiq"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"
description = "Web 3DUI toolkit"
repository = "https://github.com/krre/antiq"

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    'Document',
    'Gpu',
    'GpuAdapter',
    'GpuDevice',
    'GpuCanvasContext',
    'HtmlElement',
    'HtmlCanvasElement',
    'Navigator',
    'Window',
    'MouseEvent',
    "console",
] }

[dev-dependencies]
env_logger = "0.11.8"
