[package]
name = "antiq"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"
description = "Web 3DUI toolkit"
repository = "https://github.com/krre/antiq"

[dependencies]
futures = "0.3.31"
gloo = { version = "0.11.0", features = ["utils"] }
log = "0.4.28"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = { version = "0.3.80", features = [
    'Document',
    'Gpu',
    'GpuAdapter',
    'GpuDevice',
    'GpuCanvasContext',
    'GpuCanvasConfiguration',
    'GpuTextureFormat',
    'HtmlElement',
    'HtmlCanvasElement',
    'Navigator',
    'Window',
    'MouseEvent',
    "console",
] }

[dev-dependencies]
env_logger = "0.11.8"
